<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityBaixaHawb">

    <TextView
        android:id="@+id/tv_titulo_pg"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="80dp"
        android:background="@color/purple_700"
        android:text="REGISTRO ENTREGA"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_Numero_hawb"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/edit_fundo_claro"
        android:ems="10"
        android:inputType="number"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_Nome_recebedor"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/edit_fundo_claro"
        android:ems="10"
        android:hint="@string/editText_Nome_recebedor"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="18sp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_documento_recebedor"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/edit_fundo_claro"
        android:ems="10"
        android:hint="@string/editText_documento_recebedor"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="18sp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spn_ocorrencias"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="440dp"
        android:background="@drawable/edit_fundo_claro"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_baixa_hawb"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="620dp"
        android:onClick="Gravar"
        android:text="@string/btn_baixa_hawb"
        android:textSize="20sp"
        android:textStyle="bold" />
</FrameLayout>